Update example configuration.

--- a/example/config.yml
+++ b/example/config.yml
@@ -2,3 +2,8 @@ node_json: example/node.json
 secrets:
   - alice
 consul_lock_limit: 1
+loggers:
+  - type: stdout
+  - type: file
+    path: /tmp/itamae-client.log
+  - type: syslog
